--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,3 +1,11 @@
+= @post.title
+= @post.text
+
 = form_with(model: [@post, @comment], local: true) do |f|
   = f.text_area :content
   = f.submit '送信'
+
+- @comments.each do |comment|
+  .comment_box
+    = comment.id
+    = comment.content
