--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -9,3 +9,6 @@
   .comment_box
     = comment.id
     = comment.content
+    = link_to "#" do
+      #reply-btn
+    = link_to "削除", post_comment_path(comment.post_id, comment.id), method: :delete
