--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -13,10 +13,11 @@
       = icon('fa', 'reply', id: "reply-btn#{comment.id}")
     = link_to post_comment_path(comment.post_id, comment.id), method: :delete do
       = icon('fa', 'trash-alt')
-  = form_with(model: [@post, @comment], local: true, id: "reply-form#{comment.id}") do |form|
-    = form.text_area :text, id: "reply-text"
-    = hidden_field :reply, value: comment.id
+  = form_with(model: [@post, @new_comment], local: true, id: "reply-form#{comment.id}") do |form|
+    = form.text_area :content, id: "reply-text"
+    = form.hidden_field :reply, value: comment.id
     .content__show__comment__bottom__reply__btn
       .content__show__comment__bottom__reply__btn__cansel
         = 'Cansel'
-    = form.submit "reply"
+      = form.submit "reply"
+= @replies
