--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,4 +1,22 @@
+a {
+  text-decoration: none;
+  color: black;
+}
 .header {
   height: 70px;
   background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  &__title {
+    font-size: 32px;
+    margin-left: 50px;
+  }
+  &__list {
+    display: flex;
+    margin-right: 15px;
+    &__item {
+      padding-right: 15px;
+    }
+  }
 }
