--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,7 +1,19 @@
-%h1 新規投稿
-= form_with model: @post, local: true do |f|
-  タイトル
-  = f.text_field :title
-  テキスト
-  = f.text_area :text
-  = f.submit "投稿"
+.new
+  新規投稿
+  .new__wrapper
+    = form_with model: @post, local: true do |f|
+      .new__wrapper__content
+        .new__wrapper__content__title
+          .new__wrapper__content__title__top
+            タイトル
+          .new__wrapper__content__title__bottom
+            = f.text_field :title
+        .new__wrapper__content__tag
+          タグ
+        .new__wrapper__content__text
+          .new__wrapper__content__text__top
+            テキスト
+          .new__wrapper__content__text__bottom
+            = f.text_area :text
+        .new__wrapper__content__btn
+          = f.submit "投稿"
