--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -8,4 +8,4 @@
         .index__wrapper__content__tag
           タグ
         .index__wrapper__content__text
-          = post.text
+          = simple_format post.text
