--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,6 +1,6 @@
 .index {
   width: 100%;
-  height: calc(100vh - 70px);
+  // height: calc(100vh - 70px);
   background-color: #dae0e5;
   padding-top: 15px;
   &__search {
