--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -9,27 +9,29 @@
       .index__wrapper__content__text
         = simple_format @post.text
 
-= form_with(model: [@post, @comment], local: true) do |f|
-  = f.text_area :content
-  = f.submit '送信'
+  .index__comment__field
+    = form_with(model: [@post, @comment], local: true) do |f|
+      = f.text_area :content, class: "index__comment__field__area", rows: "3", placeholder: "コメントする"
+      = f.submit '送信', class: "index__comment__field__btn"
 
-- @comments.each do |comment|
-  - if comment.reply.blank?
-    - @comments.each do |reply|
-      .comment_box
-        = comment.id
-        = comment.content
-        - if reply.reply == comment.id
-          = reply.content
+  .index__comment__main
+    - @comments.each do |comment|
+      .index__comment__main__box
+        .index__comment__main__box--top
+          = comment.id
+          %span.index__comment__main__box--top--name 名無しのチュートリアルさん
+          = comment.created_at.strftime("%Y年%m月%d日 %H:%M")
+        .index__comment__main__box--bottom
+          = simple_format comment.content
         = link_to "#" do
           = icon('fa', 'reply', id: "reply-btn#{comment.id}")
         = link_to post_comment_path(comment.post_id, comment.id), method: :delete do
           = icon('fa', 'trash-alt')
-      = form_with(model: [@post, @new_comment], local: true, id: "reply-form#{comment.id}") do |form|
-        = form.text_area :content, id: "reply-text"
-        = form.hidden_field :reply, value: comment.id
-        .content__show__comment__bottom__reply__btn
-          .content__show__comment__bottom__reply__btn__cansel
-            = 'Cansel'
-          = form.submit "reply"
-= @replies
+        = form_with(model: [@post, @new_comment], local: true, id: "reply-form#{comment.id}") do |form|
+          = form.text_area :content, id: "reply-text", placeholder: "コメントする"
+          = form.hidden_field :reply, value: comment.id
+          .reply__btn
+            .reply__btn__cansel
+              = 'Cansel'
+          = form.submit "Reply", class: "reply__btn"
+  = @replies
