--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -3,6 +3,7 @@
   // height: calc(100vh - 70px);
   background-color: #dae0e5;
   padding-top: 15px;
+  padding-bottom: 15px;
   &__search {
   }
   &__wrapper {
