--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -5,7 +5,7 @@
       .index__wrapper__content__title
         = @post.title
       .index__wrapper__content__tag
-        タグ
+        = render 'posts/tag_list', tag_list: @post.tag_list
       .index__wrapper__content__text
         = simple_format @post.text
 
