--- a/app/assets/stylesheets/tag_list.scss
+++ b/app/assets/stylesheets/tag_list.scss
@@ -5,7 +5,7 @@
   padding: 3px;
   border: 1px solid #dae0e5;
   border-radius: 5px;
-  margin-bottom: 8px;
+  margin: 0 0 8px 8px;
   background-color: #12a3b8;
   a {
     color: white;
