--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -3,7 +3,6 @@
   background-color: #dae0e5;
   padding-top: 15px;
   padding-bottom: 15px;
-
   &__search {
   }
   &__wrapper {
@@ -28,8 +27,11 @@
         }
       }
       &__tag {
-        margin: 0 15px 15px;
+        margin: 10px;
         border-bottom: 1px solid #dae0e5;
+        display: flex;
+        justify-content: flex-start;
+        flex-wrap: wrap;
       }
       &__text {
         margin: 0 15px 15px;
