--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -12,7 +12,7 @@
           .new__post__wrapper__tag__top
             タグ
           .new__post__wrapper__tag__bottom
-            = f.text_field :tag_list, value: @post.tag_list.join(',')
+            = f.text_field :tag_list, value: @post.tag_list.join(','), class: "new__post__wrapper__tag__bottom__field", placeholder: ",で区切って入力してください　(例) Rails,Ruby"
         .new__post__wrapper__text
           .new__post__wrapper__text__top
             テキスト
