--- a/app/assets/stylesheets/new.scss
+++ b/app/assets/stylesheets/new.scss
@@ -66,7 +66,7 @@
           line-height: 1em;
           transition: 0.3s;
           box-shadow: 6px 6px 3px #666666;
-          border: 2px solid #dae0e5;
+          border: 2px solid #485369;
           width: 27%;
         }
         &__btn:hover {
