--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -7,12 +7,12 @@
     width: 50%;
     margin: 0 auto;
     &__content {
-      height: 300px;
       width: 98%;
       background-color: white;
       margin: 15px auto;
       border-radius: 10px;
       box-shadow: 0 0 8px grey;
+      padding: 10px;
       &__title {
         font-size: 24px;
         margin: 0 15px 15px;
