--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -75,7 +75,8 @@
     &__reply {
       background-color: #efefef;
       margin-bottom: 15px;
-      width: 50%;
+      width: 60%;
+      padding: 5px;
       &--top {
         padding: 10px;
         &--name {
