--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -1,8 +1,8 @@
 body {
-  background-color: #dae0e5;
+  background-color: $gray;
   height: 100vh;
 }
 a {
   text-decoration: none;
-  color: black;
+  color: $black;
 }
