--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,6 +1,6 @@
 .index {
   width: 100%;
-  background-color: #dae0e5;
+  background-color: $gray;
   padding-top: 15px;
   padding-bottom: 15px;
   &__wrapper {
@@ -8,7 +8,7 @@
     margin: 0 auto;
     &__content {
       width: 98%;
-      background-color: white;
+      background-color: $white;
       margin: 15px auto;
       border-radius: 10px;
       box-shadow: 0 0 8px grey;
@@ -16,9 +16,9 @@
       &__title {
         font-size: 24px;
         margin: 0 15px 15px;
-        border-bottom: 1px solid #dae0e5;
+        border-bottom: 1px solid $gray;
         a {
-          color: black;
+          color: $black;
         }
         a:hover {
           color: red;
@@ -26,7 +26,7 @@
       }
       &__tag {
         margin: 10px;
-        border-bottom: 1px solid #dae0e5;
+        border-bottom: 1px solid $gray;
         display: flex;
         justify-content: flex-start;
         flex-wrap: wrap;
