--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -1,13 +1,13 @@
 .login {
   width: 100%;
   height: calc(100vh - 70px);
-  background-color: #dae0e5;
+  background-color: $gray;
   padding-top: 15px;
   &__wrapper {
     width: 50%;
     height: 50%;
     margin: 0 auto;
-    background-color: white;
+    background-color: $white;
     text-align: center;
     border-radius: 10px;
     &__top {
@@ -26,11 +26,11 @@
           font-size: 14pt;
           cursor: pointer;
           padding: 12px 12px;
-          background: white;
+          background: $white;
           line-height: 1em;
           transition: 0.3s;
           box-shadow: 6px 6px 3px #666666;
-          border: 2px solid #dae0e5;
+          border: 2px solid $gray;
           width: 27%;
         }
         .login_btn:hover {
